Fix build errors: Add window_manager dependency and MediCoreColors import

--- a/medicore_app/pubspec.yaml
+++ b/medicore_app/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   
   # Window Customization (Desktop)
   bitsdojo_window: ^0.1.6
+  window_manager: ^0.3.7
   
   # Utilities
   intl: ^0.18.0
