--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -27,6 +27,29 @@ jobs:
         working-directory: medicore_app
         run: flutter build windows --release
 
+      - name: Setup Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: '1.21'
+
+      - name: Build gRPC Server (Go)
+        working-directory: medicore_server
+        run: |
+          go mod tidy
+          go build -o ../medicore_app/build/windows/x64/runner/Release/medicore-server.exe cmd/server/main.go
+        shell: powershell
+
+      - name: Verify gRPC Server Built
+        run: |
+          if (Test-Path "medicore_app/build/windows/x64/runner/Release/medicore-server.exe") {
+            Write-Host "✅ gRPC server built successfully"
+            Get-Item "medicore_app/build/windows/x64/runner/Release/medicore-server.exe" | Format-List
+          } else {
+            Write-Host "❌ gRPC server NOT found!"
+            exit 1
+          }
+        shell: powershell
+
       - name: Download VC++ Redistributables
         run: |
           New-Item -ItemType Directory -Force -Path "medicore_app/installer/vcredist"
