--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -46,6 +46,16 @@ jobs:
         with:
           go-version: '1.21'
 
+      - name: Generate Go proto files
+        working-directory: medicore_server
+        run: |
+          go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
+          go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest
+          $env:PATH = "$env:GOPATH\bin;$env:PATH"
+          protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative proto/*.proto
+          Write-Host "✅ Go proto files generated"
+        shell: powershell
+
       - name: Build gRPC Server (Go)
         working-directory: medicore_server
         run: |
