--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -23,56 +23,16 @@ jobs:
         working-directory: medicore_app
         run: flutter pub get
 
-      - name: Install protoc and Dart plugin
-        run: |
-          choco install protoc -y
-          flutter pub global activate protoc_plugin
-        shell: powershell
-
-      - name: Generate Dart proto files
-        working-directory: medicore_server
-        run: |
-          $env:PATH = "$env:USERPROFILE\AppData\Local\Pub\Cache\bin;$env:PATH"
-          protoc --dart_out=grpc:../medicore_app/lib/src/core/generated --proto_path=. proto/medicore.proto
-          Write-Host "✅ Proto files generated"
-        shell: powershell
+      # Proto generation disabled - using local database for now
+      # TODO: Re-enable when gRPC client is properly implemented
 
       - name: Build Windows x64 Release
         working-directory: medicore_app
         run: flutter build windows --release
 
-      - name: Setup Go
-        uses: actions/setup-go@v5
-        with:
-          go-version: '1.21'
-
-      - name: Generate Go proto files
-        working-directory: medicore_server
-        run: |
-          go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
-          go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest
-          $env:PATH = "$env:GOPATH\bin;$env:PATH"
-          protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative proto/medicore.proto
-          Write-Host "✅ Go proto files generated"
-        shell: powershell
-
-      - name: Build gRPC Server (Go)
-        working-directory: medicore_server
-        run: |
-          go mod tidy
-          go build -o ../medicore_app/build/windows/x64/runner/Release/medicore-server.exe cmd/server/main.go
-        shell: powershell
-
-      - name: Verify gRPC Server Built
-        run: |
-          if (Test-Path "medicore_app/build/windows/x64/runner/Release/medicore-server.exe") {
-            Write-Host "✅ gRPC server built successfully"
-            Get-Item "medicore_app/build/windows/x64/runner/Release/medicore-server.exe" | Format-List
-          } else {
-            Write-Host "❌ gRPC server NOT found!"
-            exit 1
-          }
-        shell: powershell
+      # Go gRPC server build disabled for now
+      # TODO: Re-enable when gRPC sync is properly implemented
+      # For now, admin and client both use local SQLite database
 
       - name: Download VC++ Redistributables
         run: |
