Fix: Sound not working on Windows + A5 print width fix
- Renamed notification.mp3 to notification.m4a (file was AAC format, not MP3)
- Updated all sound file references in notification_service.dart
- Updated pubspec.yaml asset reference
- Extended A5/A4 page width by 40pt to prevent early text wrapping on printers

--- a/medicore_app/pubspec.yaml
+++ b/medicore_app/pubspec.yaml
@@ -61,6 +61,6 @@ flutter:
   uses-material-design: true
   
   assets:
-    - assets/sounds/notification.mp3
+    - assets/sounds/notification.m4a
     - assets/images/
     - assets/logos/
