✨ Add AI Assistant to Patient Pages with Per-Patient Chat History
- Created PatientChatHistoryService for persistent per-patient conversations
- Created PatientAIChatWidget - reusable AI chat component for patient pages
- Added FloatingAIButton to past visits, new visits, and ordonnance pages
- Auto-loads patient context (visits + documents) for AI analysis
- Each patient has their own conversation history that persists across sessions
- AI now knows which patient you're working with automatically
- No need to manually enter patient code anymore
- Ready for Windows build with embedded API key

--- a/medicore_app/pubspec.yaml
+++ b/medicore_app/pubspec.yaml
@@ -47,6 +47,14 @@ dependencies:
   # Multi-pane layouts
   multi_split_view: ^3.0.0
   
+  # Prevent PC from sleeping
+  wakelock_plus: ^1.2.8
+  
+  # AI Chat Features
+  speech_to_text: ^6.6.0
+  flutter_markdown: ^0.6.18+2
+  http: ^1.1.0
+  
 
 dev_dependencies:
   flutter_test:
