--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -2,7 +2,7 @@ name: Build MediCore Windows Universal Installer
 
 on:
   push:
-    branches: [main, master]
+    branches: [main, master, client-ui-improvements]
   workflow_dispatch:
 
 jobs:
